$Date$

VEGAN DEVEL VERSIONS at http://r-forge.r-project.org/

Version 2.1-5 (opened October 20, 2011)

	* opened a new version with the release of vegan 2.0-1 on Oct 20,
	2011.

	* capscale: could fail if constrained component had zero rank,
	typically in partial models where constrained component was
	completely aliased. This was observed when checking an R-News
	query of October 19, 2011
	(https://stat.ethz.ch/pipermail/r-help/2011-October/293077.html)
	
Version 2.1-4 (opened October 20, 2011)

	* adonis, anosim, CCorA, envfit (factorfit, vectorfit), mantel,
	mantel.partial, mrpp, protest: user interface changed and
	'permutations' can now be a matrix where each row gives permuted
	indices. Internally first find a permutation matrix or use the
	given permutation matrix, and then find the statistics with single
	{ls}apply. Functions adonis and mrpp already worked like this, but
	they gained the option of matrix input. This makes the functions
	ready both for the 'permute' package and for parallelization
	(replace {ls}apply with mclapply, par{SL}apply).  Function
	envfit() was much simplified by generating a common permutation
	matrix in envfit.default() and using that as the input to
	vectorfit() and factorfit(). The anova.cca* cases should also be
	made to use a single generated permutation matrix, as
	permutest.cca() allows this.

Version 2.1-3 (closed October 16, 2011)

	* added plot.preston, lines.preston and plot.fisher (that also can
	add points and lines). These are similar as plot.prestonfit and
	plot.fisherfit, but without the fitted model. Among other things,
	they can be used to add alternative models to fisherfit and
	prestonfit models.

	* sd() function for matrix or data.frame columns was deprecated in
	R r57185 (R-to-be-2.15.0). The reason seems to be that users were
	confused when median() did not work on data.frames, and as a
	solution the R developers decided to take care that mean() or sd()